--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,14 @@
    <dependencies>
 		
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>2.53.1</version>
-		</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
+<dependency>
+  <groupId>org.seleniumhq.selenium</groupId>
+  <artifactId>selenium-server</artifactId>
+  <version>3.3.1</version>
+</dependency>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		
 		<!-- https://mvnrepository.com/artifact/org.uncommons/reportng -->
@@ -98,7 +101,16 @@
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
-
+<dependency>
+   <groupId>org.apache.poi</groupId>
+   <artifactId>poi-ooxml</artifactId>
+   <version>3.9</version>
+</dependency>
+<dependency>
+   <groupId>org.apache.poi</groupId>
+   <artifactId>poi</artifactId>
+   <version>3.11-beta3</version>
+</dependency>
 
 
 
