--- a/pom.xml
+++ b/pom.xml
@@ -18,16 +18,7 @@
                 <executable>C:\Program Files\Java\jdk1.8.0_60\bin\javac.exe</executable>
             </configuration>
         </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
-				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
-				</configuration>
-			</plugin>
+			
 		</plugins>
 		
 	
@@ -35,14 +26,11 @@
    <dependencies>
 		
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-
-
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
-<dependency>
-  <groupId>org.seleniumhq.selenium</groupId>
-  <artifactId>selenium-server</artifactId>
-  <version>3.3.1</version>
-</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>2.53.1</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		
 		<!-- https://mvnrepository.com/artifact/org.uncommons/reportng -->
@@ -93,24 +81,9 @@
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>6.9.8</version>
-    <scope>test</scope>
-</dependency>
 
 <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
-<dependency>
-   <groupId>org.apache.poi</groupId>
-   <artifactId>poi-ooxml</artifactId>
-   <version>3.9</version>
-</dependency>
-<dependency>
-   <groupId>org.apache.poi</groupId>
-   <artifactId>poi</artifactId>
-   <version>3.11-beta3</version>
-</dependency>
+
 
 
 
